...
          child: Text(fieldDescription),
        ),
        Row(
          children: <Widget>[
            Expanded(
              child: TextFormField(
                key: const Key("Latitude Field"),
                controller: latController,
                keyboardType: keyboardType,
                decoration: const InputDecoration(
                    labelText: 'Latitude', border: OutlineInputBorder()),
                inputFormatters: inputFormatters,
                validator: (value) {
                  return latValidator(value, lonController);
                },
              ),
            ),
            Expanded(
              child: TextFormField(
                  key: const Key("Longitude Field"),
                  controller: lonController,
                  keyboardType: keyboardType,
                  decoration: const InputDecoration(
                      labelText: 'Longitude', border: OutlineInputBorder()),
                  inputFormatters: inputFormatters,
                  validator: (value) {
...
